Hamburger menu and portfolio page changes. Getting ready to do big SASS/scss change

--- a/project1.html
+++ b/project1.html
@@ -17,20 +17,22 @@
 
     <!-- Navigation Menu -->
     <nav class="nav-menu" id="nav-menu">
-        <a href="home.html">Home</a>
-        <a href="home.html#about">About</a>
-        <a href="home.html#work">Portfolio</a>
-        <a href="home.html#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#work">Portfolio</a>
+        <a href="index.html#contact">Contact</a>
     </nav>
 
     <!-- Project Header -->
-    <header class="project-header">
-        <h1>Project Title</h1>
-        <p>A detailed showcase of this amazing project</p>
+    <header id="header">
+        <div class="inner">
+            <h1>Project Title</h1>
+            <p>A detailed showcase of this amazing project</p>
+        </div>
     </header>
 
     <!-- Project Content -->
-    <div class="project-container">
+    <div id="main">
         <div class="project-content">
             <div class="project-image">
                 <img src="images/project-full.jpg" alt="Project Full Image" />
@@ -52,7 +54,7 @@
                     </ul>
                 </div>
                 
-                <a href="home.html#work" class="back-button">Back to Portfolio</a>
+                <a href="index.html#work" class="back-button">Back to Portfolio</a>
             </div>
         </div>
         
