--- a/project2.html
+++ b/project2.html
@@ -17,10 +17,10 @@
 
     <!-- Navigation Menu -->
     <nav class="nav-menu" id="nav-menu">
-        <a href="home.html">Home</a>
-        <a href="home.html#about">About</a>
-        <a href="home.html#work">Portfolio</a>
-        <a href="home.html#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#about">About</a>
+        <a href="index.html#work">Portfolio</a>
+        <a href="index.html#contact">Contact</a>
     </nav>
 
     <!-- Project Header -->
@@ -52,7 +52,7 @@
                     </ul>
                 </div>
                 
-                <a href="home.html#work" class="back-button">Back to Portfolio</a>
+                <a href="index.html#work" class="back-button">Back to Portfolio</a>
             </div>
         </div>
         
