Working resume and continued cleanup of header, footer, menu

--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
         <a href="index.html">Home</a>
         <a href="#about">About</a>
         <a href="#work">Portfolio</a>
-        <a href="#contact">Contact</a>
+        <a href="resume.html">Resume</a>
     </nav>
 
     <!-- Header -->
     <header id="header">
         <div class="inner">
             <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-            <h1><strong>Your Name</strong>, your title<br />
-            crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+            <h1><strong>Nicholas Nelsonwood</strong></h1>
+            <p>Mechanical/Mechatronics Engineer</p>
+            <!-- <p>Welcome to my portfolio website</p> -->
         </div>
     </header>
 
@@ -42,7 +43,7 @@
             </header>
             <p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
             <ul class="actions">
-                <li><a href="#" class="button">Learn More</a></li>
+                <li><a href="resume.html" class="button">See Resume</a></li>
             </ul>
         </section>
 
@@ -112,6 +113,7 @@
         </section>
 
         <!-- Three -->
+<!--
         <section id="contact">
             <h2>Get In Touch</h2>
             <p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -148,19 +150,20 @@
                 </div>
             </div>
         </section>
-    </div>
+    </div> 
+-->
 
     <!-- Footer -->
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
-                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-                <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="https://www.linkedin.com/in/nicholas-nelsonwood/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/NicholasNelsonwood" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Your Name</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>&copy; 2025 Nicholas Nelsonwood</li><li>Design: Based on templates from <a href="http://html5up.net">HTML5 UP</a> under <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a>
+
             </ul>
         </div>
     </footer>
