--- a/project1.html
+++ b/project1.html
@@ -20,14 +20,15 @@
         <a href="index.html">Home</a>
         <a href="index.html#about">About</a>
         <a href="index.html#work">Portfolio</a>
-        <a href="index.html#contact">Contact</a>
+        <a href="resume.html">Resume</a>
     </nav>
 
     <!-- Project Header -->
     <header id="header">
         <div class="inner">
-            <h1>Project Title</h1>
-            <p>A detailed showcase of this amazing project</p>
+            <a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+            <h1><strong>Nicholas Nelsonwood</strong><br />Mechanical/Mechatronics Engineer<br />
+            Welcome to my portfolio website</h1>
         </div>
     </header>
 
@@ -90,13 +91,13 @@
     <footer id="footer">
         <div class="inner">
             <ul class="icons">
-                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-                <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="https://www.linkedin.com/in/nicholas-nelsonwood/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                <li><a href="https://github.com/NicholasNelsonwood" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
-                <li>&copy; Your Name</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                <li>&copy; 2025 Nicholas Nelsonwood</li><li>Design: Based on templates from <a href="http://html5up.net">HTML5 UP</a> under <a href="https://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0</a>
+
             </ul>
         </div>
     </footer>
